--- a/Battleship/BlazorApp/Pages/Battleship.razor
+++ b/Battleship/BlazorApp/Pages/Battleship.razor
@@ -45,6 +45,7 @@
             new BlazorUpdateLogic(game.GameData.Input).Update(deltaTime, game);
             DrawArea = BlazorDrawLogic.GetDraw(deltaTime, game.GameData);
             StateHasChanged();
+            
             await Task.Delay(Math.Max(1000 / 60 - (int) (deltaTime * 1000), 1));
         }
     }
@@ -63,6 +64,7 @@
             GameBoardDiv.FocusAsync();
             // await jsRuntime.InvokeVoidAsync("JsFunctions.addKeyboardEventListener");
         }
+        jsRuntime.InvokeVoidAsync("getGameView", DrawArea.ToJaggedArray(), DrawArea.GetHeight(), DrawArea.GetWidth());
         return Task.CompletedTask;
     }
 
@@ -117,41 +119,7 @@
         <div class="container" tabindex="0" @onkeydown="KeyDown" @onkeydown:preventDefault @ref="GameBoardDiv">
             <div class="row">
                 <div id="board" class="col capsizedText PressStart2PFont" style="font-size: 16px; line-height: 16px; padding: 0;">
-                    @{
-                    var ColorIntToCssString = new Dictionary<int, string>()
-                    {
-                        { 0, "rgb(12,     12,     12 )" },             // Black
-                        { 1, "rgb(0,      55,     218) " },            // DarkBlue
-                        { 2, "rgb(19,     161,    14  )" },            // DarkGreen
-                        { 3, "rgb(58,     150,    221) " },            // DarkCyan
-                        { 4, "rgb(197,    15,     31  )" },            // DarkRed
-                        { 5, "rgb(136,    23,     152) " },            // DarkMagenta
-                        { 6, "rgb(193,    156,    0  )" },             // DarkYellow
-                        { 7, "rgb(204,    204,    204) " },            // Gray
-                        { 8, "rgb(118,    118,    118) " },            // DarkGrey
-                        { 9, "rgb(59,     120,    255) " },            // Blue
-                        { 10, "rgb(22,    192,    12  )" },            // Green
-                        { 11, "rgb(97,    214,    214) " },            // Cyan
-                        { 12, "rgb(231,   72,     86  )" },            // Red
-                        { 13, "rgb(180,   0,      158) " },            // Magenta
-                        { 14, "rgb(249,   241,    165) " },            // Yellow
-                        { 15, "rgb(242,   242,    242) " }             // White
-                    };
                     
-                    for (int y = 0; y < DrawArea.GetHeight(); y++)
-                    {
-                    <p style="display: flex; margin-top: 0; margin-bottom: 0;">
-                        @for (int x = 0; x < DrawArea.GetWidth(); x++)
-                        {
-                            var charInfo = DrawArea[y, x];
-                            var colCss = ColorIntToCssString[charInfo.Color.IntVal];
-                            var character = charInfo.Glyph;
-                            character = character == ' ' ? '.' : character;
-                            <em style="color: @colCss;">@character</em>
-                        }
-                    </p>
-                    }
-                    }
                 </div>
             </div>
         </div>
